// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DataTable ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiTableContainer-root css-144rynq-MuiPaper-root-MuiTableContainer-root"
    style="--Paper-shadow: none;"
  >
    <table
      class="MuiTable-root css-it962b-MuiTable-root"
    >
      <thead
        class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head css-w5nrrj-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-h41ysy-MuiTableCell-root"
            color="default"
            style="width: 50px;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1bgzqf4-MuiTypography-root"
            >
              ID
            </p>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-l118px-MuiGrid-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fnelvs-MuiSvgIcon-root"
                data-testid="ChevronUpIcon"
                focusable="false"
                role="button"
                style="color: rgb(85, 85, 85);"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fnelvs-MuiSvgIcon-root"
                data-testid="ChevronDownIcon"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-y750oy-MuiTableCell-root"
            color="default"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1bgzqf4-MuiTypography-root"
            >
              Name
            </p>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-l118px-MuiGrid-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fnelvs-MuiSvgIcon-root"
                data-testid="ChevronUpIcon"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fnelvs-MuiSvgIcon-root"
                data-testid="ChevronDownIcon"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-y750oy-MuiTableCell-root"
            color="default"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1bgzqf4-MuiTypography-root"
            >
              Field A
            </p>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-l118px-MuiGrid-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fnelvs-MuiSvgIcon-root"
                data-testid="ChevronUpIcon"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fnelvs-MuiSvgIcon-root"
                data-testid="ChevronDownIcon"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-y750oy-MuiTableCell-root"
            color="default"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1bgzqf4-MuiTypography-root"
            >
              Field B
            </p>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-l118px-MuiGrid-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fnelvs-MuiSvgIcon-root"
                data-testid="ChevronUpIcon"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fnelvs-MuiSvgIcon-root"
                data-testid="ChevronDownIcon"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-y750oy-MuiTableCell-root"
            color="default"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1bgzqf4-MuiTypography-root"
            >
              Field C
            </p>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-l118px-MuiGrid-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fnelvs-MuiSvgIcon-root"
                data-testid="ChevronUpIcon"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fnelvs-MuiSvgIcon-root"
                data-testid="ChevronDownIcon"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root css-72ojop-MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-169to3r-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 50px;"
          >
            1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 100px;"
          >
            Item 1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 100px;"
          >
            Field A1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 100px;"
          >
            Field B1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 100px;"
          >
            Field C1
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-169to3r-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 50px;"
          >
            2
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 100px;"
          >
            Item 2
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 100px;"
          >
            Field A2
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 100px;"
          >
            Field B2
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 100px;"
          >
            Field C2
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-169to3r-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 50px;"
          >
            3
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 100px;"
          >
            Item 3
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 100px;"
          >
            Field A3
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 100px;"
          >
            Field B3
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 100px;"
          >
            Field C3
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-169to3r-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 50px;"
          >
            4
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 100px;"
          >
            Item 4
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 100px;"
          >
            Field A4
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 100px;"
          >
            Field B4
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 100px;"
          >
            Field C4
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-169to3r-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 50px;"
          >
            5
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 100px;"
          >
            Item 5
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 100px;"
          >
            Field A5
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 100px;"
          >
            Field B5
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1q1ctnb-MuiTableCell-root"
            style="width: 100px;"
          >
            Field C5
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DataTable ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiTableContainer-root css-jppci7-MuiPaper-root-MuiTableContainer-root"
    style="--Paper-shadow: none;"
  >
    <table
      class="MuiTable-root css-1q847gp-MuiTable-root"
    >
      <thead
        class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head css-7o9wm2-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-15qmtpl-MuiTableCell-root"
            color="default"
            style="width: 50px;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-yrur6j-MuiTypography-root"
            >
              ID
            </p>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-l118px-MuiGrid-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fnelvs-MuiSvgIcon-root"
                data-testid="ChevronUpIcon"
                focusable="false"
                role="button"
                style="color: rgb(0, 0, 0);"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fnelvs-MuiSvgIcon-root"
                data-testid="ChevronDownIcon"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-17wjbwk-MuiTableCell-root"
            color="default"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-yrur6j-MuiTypography-root"
            >
              Name
            </p>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-l118px-MuiGrid-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fnelvs-MuiSvgIcon-root"
                data-testid="ChevronUpIcon"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fnelvs-MuiSvgIcon-root"
                data-testid="ChevronDownIcon"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-17wjbwk-MuiTableCell-root"
            color="default"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-yrur6j-MuiTypography-root"
            >
              Field A
            </p>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-l118px-MuiGrid-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fnelvs-MuiSvgIcon-root"
                data-testid="ChevronUpIcon"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fnelvs-MuiSvgIcon-root"
                data-testid="ChevronDownIcon"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-17wjbwk-MuiTableCell-root"
            color="default"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-yrur6j-MuiTypography-root"
            >
              Field B
            </p>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-l118px-MuiGrid-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fnelvs-MuiSvgIcon-root"
                data-testid="ChevronUpIcon"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fnelvs-MuiSvgIcon-root"
                data-testid="ChevronDownIcon"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-17wjbwk-MuiTableCell-root"
            color="default"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-yrur6j-MuiTypography-root"
            >
              Field C
            </p>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-l118px-MuiGrid-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fnelvs-MuiSvgIcon-root"
                data-testid="ChevronUpIcon"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-fnelvs-MuiSvgIcon-root"
                data-testid="ChevronDownIcon"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-7o9wm2-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 50px;"
          >
            1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 100px;"
          >
            Item 1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 100px;"
          >
            Field A1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 100px;"
          >
            Field B1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 100px;"
          >
            Field C1
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-7o9wm2-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 50px;"
          >
            2
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 100px;"
          >
            Item 2
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 100px;"
          >
            Field A2
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 100px;"
          >
            Field B2
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 100px;"
          >
            Field C2
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-7o9wm2-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 50px;"
          >
            3
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 100px;"
          >
            Item 3
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 100px;"
          >
            Field A3
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 100px;"
          >
            Field B3
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 100px;"
          >
            Field C3
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-7o9wm2-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 50px;"
          >
            4
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 100px;"
          >
            Item 4
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 100px;"
          >
            Field A4
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 100px;"
          >
            Field B4
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 100px;"
          >
            Field C4
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-7o9wm2-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 50px;"
          >
            5
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 100px;"
          >
            Item 5
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 100px;"
          >
            Field A5
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 100px;"
          >
            Field B5
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-32wvrp-MuiTableCell-root"
            style="width: 100px;"
          >
            Field C5
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DataTable ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiTableContainer-root css-1v6b4ud-MuiPaper-root-MuiTableContainer-root"
    style="--Paper-shadow: none;"
  >
    <table
      class="MuiTable-root css-yvkulj-MuiTable-root"
    >
      <thead
        class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head css-12muqxp-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-qwku7a-MuiTableCell-root"
            color="default"
            style="width: 50px;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1cp584r-MuiTypography-root"
            >
              ID
            </p>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-607anb-MuiGrid-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1agdqk4-MuiSvgIcon-root"
                data-testid="ChevronUpIcon"
                focusable="false"
                role="button"
                style="color: rgb(33, 33, 33);"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1agdqk4-MuiSvgIcon-root"
                data-testid="ChevronDownIcon"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-f1lk99-MuiTableCell-root"
            color="default"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1cp584r-MuiTypography-root"
            >
              Name
            </p>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-607anb-MuiGrid-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1agdqk4-MuiSvgIcon-root"
                data-testid="ChevronUpIcon"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1agdqk4-MuiSvgIcon-root"
                data-testid="ChevronDownIcon"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-f1lk99-MuiTableCell-root"
            color="default"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1cp584r-MuiTypography-root"
            >
              Field A
            </p>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-607anb-MuiGrid-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1agdqk4-MuiSvgIcon-root"
                data-testid="ChevronUpIcon"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1agdqk4-MuiSvgIcon-root"
                data-testid="ChevronDownIcon"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-f1lk99-MuiTableCell-root"
            color="default"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1cp584r-MuiTypography-root"
            >
              Field B
            </p>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-607anb-MuiGrid-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1agdqk4-MuiSvgIcon-root"
                data-testid="ChevronUpIcon"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1agdqk4-MuiSvgIcon-root"
                data-testid="ChevronDownIcon"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-f1lk99-MuiTableCell-root"
            color="default"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1cp584r-MuiTypography-root"
            >
              Field C
            </p>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-607anb-MuiGrid-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1agdqk4-MuiSvgIcon-root"
                data-testid="ChevronUpIcon"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1agdqk4-MuiSvgIcon-root"
                data-testid="ChevronDownIcon"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-12muqxp-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 50px;"
          >
            1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 100px;"
          >
            Item 1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 100px;"
          >
            Field A1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 100px;"
          >
            Field B1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 100px;"
          >
            Field C1
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-12muqxp-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 50px;"
          >
            2
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 100px;"
          >
            Item 2
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 100px;"
          >
            Field A2
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 100px;"
          >
            Field B2
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 100px;"
          >
            Field C2
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-12muqxp-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 50px;"
          >
            3
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 100px;"
          >
            Item 3
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 100px;"
          >
            Field A3
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 100px;"
          >
            Field B3
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 100px;"
          >
            Field C3
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-12muqxp-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 50px;"
          >
            4
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 100px;"
          >
            Item 4
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 100px;"
          >
            Field A4
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 100px;"
          >
            Field B4
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 100px;"
          >
            Field C4
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-12muqxp-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 50px;"
          >
            5
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 100px;"
          >
            Item 5
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 100px;"
          >
            Field A5
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 100px;"
          >
            Field B5
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-eyf6pi-MuiTableCell-root"
            style="width: 100px;"
          >
            Field C5
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DataTable ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiTableContainer-root css-1qs1fsd-MuiPaper-root-MuiTableContainer-root"
    style="--Paper-shadow: none;"
  >
    <table
      class="MuiTable-root css-1ui7dc0-MuiTable-root"
    >
      <thead
        class="MuiTableHead-root css-1a7iywq-MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head css-9ym1b0-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-72px44-MuiTableCell-root"
            color="default"
            style="width: 50px;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1g5kode-MuiTypography-root"
            >
              ID
            </p>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-607anb-MuiGrid-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8y6k86-MuiSvgIcon-root"
                data-testid="ChevronUpIcon"
                focusable="false"
                role="button"
                style="color: rgba(0, 0, 0, 0.87);"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8y6k86-MuiSvgIcon-root"
                data-testid="ChevronDownIcon"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1m6fqpo-MuiTableCell-root"
            color="default"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1g5kode-MuiTypography-root"
            >
              Name
            </p>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-607anb-MuiGrid-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8y6k86-MuiSvgIcon-root"
                data-testid="ChevronUpIcon"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8y6k86-MuiSvgIcon-root"
                data-testid="ChevronDownIcon"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1m6fqpo-MuiTableCell-root"
            color="default"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1g5kode-MuiTypography-root"
            >
              Field A
            </p>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-607anb-MuiGrid-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8y6k86-MuiSvgIcon-root"
                data-testid="ChevronUpIcon"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8y6k86-MuiSvgIcon-root"
                data-testid="ChevronDownIcon"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1m6fqpo-MuiTableCell-root"
            color="default"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1g5kode-MuiTypography-root"
            >
              Field B
            </p>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-607anb-MuiGrid-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8y6k86-MuiSvgIcon-root"
                data-testid="ChevronUpIcon"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8y6k86-MuiSvgIcon-root"
                data-testid="ChevronDownIcon"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium css-1m6fqpo-MuiTableCell-root"
            color="default"
            style="width: 100px;"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1g5kode-MuiTypography-root"
            >
              Field C
            </p>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-607anb-MuiGrid-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8y6k86-MuiSvgIcon-root"
                data-testid="ChevronUpIcon"
                focusable="false"
                role="button"
                viewBox="9 3 5 15"
              >
                <path
                  d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8y6k86-MuiSvgIcon-root"
                data-testid="ChevronDownIcon"
                focusable="false"
                role="button"
                viewBox="9 7 5 15"
              >
                <path
                  d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                />
              </svg>
            </div>
          </td>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root css-gmh7jj-MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-9ym1b0-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 50px;"
          >
            1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 100px;"
          >
            Item 1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 100px;"
          >
            Field A1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 100px;"
          >
            Field B1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 100px;"
          >
            Field C1
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-9ym1b0-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 50px;"
          >
            2
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 100px;"
          >
            Item 2
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 100px;"
          >
            Field A2
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 100px;"
          >
            Field B2
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 100px;"
          >
            Field C2
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-9ym1b0-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 50px;"
          >
            3
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 100px;"
          >
            Item 3
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 100px;"
          >
            Field A3
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 100px;"
          >
            Field B3
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 100px;"
          >
            Field C3
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-9ym1b0-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 50px;"
          >
            4
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 100px;"
          >
            Item 4
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 100px;"
          >
            Field A4
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 100px;"
          >
            Field B4
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 100px;"
          >
            Field C4
          </td>
        </tr>
        <tr
          class="MuiTableRow-root MuiTableRow-hover css-9ym1b0-MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 50px;"
          >
            5
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 100px;"
          >
            Item 5
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 100px;"
          >
            Field A5
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 100px;"
          >
            Field B5
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body MuiTableCell-paddingNone MuiTableCell-sizeMedium css-1h25bsk-MuiTableCell-root"
            style="width: 100px;"
          >
            Field C5
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
